# toy-db

./: .gitignore  CMakeLists.txt  COVERAGE.md  FIX_COMPLETE.md  GITHUB_PUSH_SUMMARY.md  JOIN_FIX_SUMMARY.md  PHASE2_SUMMARY.md  PHASE3_SUMMARY.md  PHASE4_SUMMARY.md  PHASE5_SUMMARY.md  PHASE6_SUMMARY.md  PHASE7_SUMMARY.md  PROJECT_COMPLETE.md  README.md  TESTING_BEFORE_AFTER.md  TESTING_SETUP_COMPLETE.md  TEST_SUMMARY.md  debug_join.py  pyproject.toml  setup.py
cpp/bindings/: python_bindings.cpp
cpp/include/: btree.hpp  buffer_pool.hpp  page.hpp  page_manager.hpp  wal.hpp
cpp/src/: btree.cpp  buffer_pool.cpp  page.cpp  page_manager.cpp  wal.cpp
python/toydb/: __init__.py  aggregates.py  ast_nodes.py  catalog.py  executor.py  parser.py  planner.py
tests/: QUICK_REFERENCE.md  README.md  TEST_STATUS.md  __init__.py  conftest.py  run_tests.py
tests/integration/: test_debug.py  test_manual_read.py  test_rawdata.py
tests/performance/: test_cache_vs_disk.py
tests/unit/: test_basic.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase5.py  test_phase6.py  test_phase7.py
