[build-system]
requires = ["setuptools>=64", "wheel", "pybind11>=2.10.0"]
build-backend = "setuptools.build_meta"

[project]
name = "toydb"
version = "0.1.0"
description = "A minimal but functional database engine"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Liyang Lou"}]
dependencies = [
    "pybind11>=2.10.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[tool.setuptools.packages.find]
where = ["python"]

[tool.setuptools.package-data]
toydb = ["*.so", "*.pyd"]
